--- a/app/src/main/res/layout/activity_overlay2.xml
+++ b/app/src/main/res/layout/activity_overlay2.xml
@@ -1,88 +1,119 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<androidx.constraintlayout.widget.ConstraintLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
+    <ImageView
+        android:id="@+id/arrow1"
+        android:layout_width="150dp"
+        android:layout_height="85dp"
+        android:layout_marginStart="12dp"
         android:background="@null"
+        android:src="@drawable/arrow1_removebg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.497"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.069" />
+
+    <TextView
         android:id="@+id/appointment"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginEnd="80dp"
+        android:background="@null"
         android:fontFamily="serif"
         android:text="Tap to Book \n your Appointment"
         android:textAlignment="center"
         android:textColor="#2E8022"
-        android:textSize="16sp"
-        android:layout_marginLeft="60dp"
-        android:layout_below="@+id/arrow1"/>
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.4"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/arrow1" />
 
     <ImageView
-        android:background="@null"
-        android:id="@+id/arrow1"
-        android:layout_width="150dp"
+        android:id="@+id/arrow2"
+        android:layout_width="124dp"
         android:layout_height="85dp"
-        android:src="@drawable/arrow1_removebg"
-        android:layout_marginTop="40dp"
-        android:layout_marginLeft="100dp"/>
+        android:layout_marginEnd="28dp"
+        android:background="@null"
+        android:src="@drawable/arrow2_removebg"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.82"
+        app:layout_constraintStart_toEndOf="@+id/arrow1"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.110000014" />
+
 
     <TextView
-        android:background="@null"
         android:id="@+id/notification"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_below="@+id/arrow2"
+        android:layout_marginEnd="20dp"
+        android:background="@null"
         android:fontFamily="serif"
         android:text="Tap to see \n new notifications"
         android:textAlignment="center"
         android:textColor="#2E8022"
-        android:textSize="16sp"
-        android:layout_below="@+id/arrow2"
-        android:layout_marginLeft="200dp"/>
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toEndOf="@+id/appointment"
+        app:layout_constraintTop_toBottomOf="@+id/arrow2" />
 
     <ImageView
-        android:background="@null"
-        android:id="@+id/arrow2"
+        android:id="@+id/arrow3"
         android:layout_width="124dp"
-        android:layout_height="85dp"
-        android:src="@drawable/arrow2_removebg"
+        android:layout_height="145dp"
+        android:layout_marginStart="10dp"
         android:layout_marginTop="65dp"
-        android:layout_marginLeft="220dp"/>
+        android:background="@null"
+        android:src="@drawable/arrow3_removebg"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.613"
+        app:layout_constraintStart_toEndOf="@+id/arrow2"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
-        android:background="@null"
         android:id="@+id/add"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/arrow3"
-        android:layout_marginLeft="260dp"
-        android:layout_marginTop="-9dp"
+        android:layout_marginTop="4dp"
+        android:background="@null"
         android:fontFamily="serif"
         android:text="Tap to add \n a patient"
         android:textAlignment="center"
         android:textColor="#2E8022"
-        android:textSize="16sp" />
+        android:textSize="14sp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.923"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/notification" />
 
-    <ImageView
-        android:background="@null"
-        android:id="@+id/arrow3"
-        android:layout_width="124dp"
-        android:layout_height="145dp"
-        android:src="@drawable/arrow3_removebg"
-        android:layout_marginTop="65dp"
-        android:layout_marginLeft="315dp"/>
 
     <TextView
-        android:background="@null"
         android:id="@+id/queue"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_centerInParent="true"
+        android:background="@null"
         android:text="Patient Queue"
         android:textColor="#2E8022"
         android:textSize="32sp"
         android:textStyle="normal|bold"
-        android:layout_centerInParent="true"/>
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.478"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
 
-</RelativeLayout>
+</androidx.constraintlayout.widget.ConstraintLayout>
